<resources>
    <string name="app_name">IDontKnowYet</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TitleString">Hannah\'s Herb Watcher</string>
    <string name="HeaderDescription">A floral greenhouse with rain falling on the windows</string>
    <string name="WelcomeMessage">Welcome back Hannah</string>
    <string name="NewCropDialogTitle">What are you planting?</string>
    <string name="EditCropDialogTitle">Editing Crop: %1$s</string>
    <string name="PosButt">Add</string>
    <string name="EdButt">Save</string>
    <string name="NegButt">Cancel</string>
    <string name="DrawerOpen">Open</string>
    <string name="DrawerClose">Close</string>
    <string name="TypeDialogHint">Crop Type</string>
    <string name="WaterDialogText">Add hours at which needs to be watered</string>
    <string name="WaterHoursDialogText">Watering Hours:</string>
    <string name="GrowthLabel">Growth</string>
    <string name="DaysSpecification"> days old</string>
    <string name="WaterLabel">Next Water</string>
    <string name="CropTitle">Your\ </string>
    <string name="CropToNotes">Go to Notes</string>
    <string name="WaterChannelName">Watering Notifications</string>
    <string name="WaterChannelDescription">Notify user plants need watered.</string>
    <string name="WaterNotificationTitle">Water Alert</string>
    <string name="WaterNotificationContent">You have plants that need watering!</string>

    <string-array name="crop_type_spinner_list">
        <item>Select Type from dropdown:</item>
        <item>Flower</item>
        <item>Herb</item>
        <item>Vegetable</item>
        <item>Fruit</item>
    </string-array>

    <string-array name="water_hours_spinner_list">
        <item>Add Watering Hours from dropdown:</item>
        <item>12:00 AM</item>
        <item>1:00 AM</item>
        <item>2:00 AM</item>
        <item>3:00 AM</item>
        <item>4:00 AM</item>
        <item>5:00 AM</item>
        <item>6:00 AM</item>
        <item>7:00 AM</item>
        <item>8:00 AM</item>
        <item>9:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>1:00 PM</item>
        <item>2:00 PM</item>
        <item>3:00 PM</item>
        <item>4:00 PM</item>
        <item>5:00 PM</item>
        <item>6:00 PM</item>
        <item>7:00 PM</item>
        <item>8:00 PM</item>
        <item>9:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
    </string-array>
</resources>
