<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:id="@+id/crop_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:editable="true"
        android:ems="10"
        android:hint="Crop Name"
        android:inputType="text" />

    <Spinner
        android:id="@+id/crop_type_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/crop_type_spinner_list"
        android:prompt="@string/TypeDialogHint" />

    <EditText
        android:id="@+id/crop_growth_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:editable="true"
        android:ems="10"
        android:hint="Expected growth time (number of days)"
        android:inputType="number" />

    <Spinner
        android:id="@+id/water_hours_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:dropDownWidth="wrap_content"
        android:entries="@array/water_hours_spinner_list"
        android:prompt="@string/WaterDialogText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/waterHoursConstraints"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/undo_hour_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="Undo Add Hour"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/waterHoursLabel"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/waterHoursLabel"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/WaterHoursDialogText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>