<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.CropListFragment">

    <TextView
        android:id="@+id/crop_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/CropTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/crop_status_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/crop_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/water_status_label_crop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground" />

            <TextView
                android:id="@+id/crop_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="TextView"
                app:layout_constraintBottom_toTopOf="@id/time_to_harvest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/crop_type"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/growth_progress_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/GrowthLabel"
                app:layout_constraintBottom_toTopOf="@id/water_status_label_crop"
                app:layout_constraintEnd_toStartOf="@id/time_to_harvest"
                app:layout_constraintStart_toEndOf="@id/crop_type"
                app:layout_constraintTop_toBottomOf="@id/crop_label" />

            <ProgressBar
                android:id="@+id/time_to_harvest"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toTopOf="@id/water_status_crop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/growth_progress_label"
                app:layout_constraintTop_toBottomOf="@id/crop_label" />

            <TextView
                android:id="@+id/water_status_label_crop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Water"
                app:layout_constraintBottom_toTopOf="@id/water_times_label"
                app:layout_constraintEnd_toStartOf="@id/water_status_crop"
                app:layout_constraintStart_toEndOf="@+id/crop_type"
                app:layout_constraintTop_toBottomOf="@id/growth_progress_label" />

            <TextView
                android:id="@+id/water_status_crop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toTopOf="@id/watering_times"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/water_status_label_crop"
                app:layout_constraintTop_toBottomOf="@id/time_to_harvest" />

            <TextView
                android:id="@+id/water_times_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Watering Times:"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/crop_type"
                app:layout_constraintTop_toBottomOf="@id/water_status_label_crop" />

            <TextView
                android:id="@+id/watering_times"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/water_times_label"
                app:layout_constraintTop_toBottomOf="@id/water_status_crop" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/crop_to_notes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/CropToNotes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/crop_memories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <Button
        android:id="@+id/goto_camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Capture a Memory!" />

    <androidx.cardview.widget.CardView
        android:id="@+id/update_crop_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <Button
                android:id="@+id/water_crop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Water"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/edit_crop_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_crop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Edit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/remove_crop_button"
                app:layout_constraintStart_toEndOf="@id/water_crop_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/remove_crop_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/edit_crop_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>